--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "mongo-seeding": "^3.4.1",
     "mongodb": "^3.5.9"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/index.js",
